src/test/deca/context/valid/returnsubtype.deca
class A {
protected int x;
}
class B extends A {
    
A getX(A a) {
    B b = new B();
return b; // Erreur contextuelle : le type de 'a' (A) n'est pas
// un sous-type de B.
}
}