src/test/deca/context/invalid/polyy.deca
class A {
protected int x;
}
class B extends A {
    
A getX(A a) {
    B b = new B();
return a.x; // Erreur contextuelle : le type de 'a' (A) n'est pas
// un sous-type de B.
}
}